cluster/apps/gitea/templates/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
      sectionName: gitea-ssh
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gitea-ssh
          port: 22
          weight: 1
